--- a/src/componentes/itemDetailContainer/index.css
+++ b/src/componentes/itemDetailContainer/index.css
@@ -14,15 +14,11 @@
     --lg :18px;
 }
 
-body{
-    font-family: 'Poppins', sans-serif;
+.itemDetailContainer{
+    
+    background-color: red;
+    height: 100vh;
+    display: grid;
+    place-items: center;
 
 }
-
-h1{
-    color: var(--vinotinto);
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 0px;
-}
-
