--- a/src/componentes/navbar/index.css
+++ b/src/componentes/navbar/index.css
@@ -1,111 +1,137 @@
-*{
+* {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 :root {
-    --black:#000000;
+    --black: #000000;
     --white: #FFFFFF;
     --light: #C7C7C7;
+    --verde: #00D8BC;
     --text: #777676;
     --vinotinto: #63174A;
-    --sm:12px;
-    --md :16px;
-    --lg :18px;
+    --sm: 12px;
+    --md: 16px;
+    --lg: 18px;
 }
 
-body{
+body {
     font-family: 'Poppins', sans-serif;
 }
 
-header{
-    border-bottom: 0.1px solid var(--vinotinto);
+.active {
+    background-color: var(--verde);
+
 }
-
-.menu{
-    display: none;
-}
-
-.logo{
-    width: 76px;
-    
-}
-
-/* header{
-    /* border-bottom: 1px solid var(--light);  */
-
 
 nav {
+    background-color: var(--vinotinto);
     display: flex;
-    justify-content: space-between;   
-    padding: 0 24px;
-}
-
-.navbar-left ul,
-.navbar-right ul {
-    list-style : none;
-    padding: 0;
-    margin: 0;
-    display: flex;
+    justify-content: space-between;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 
 }
 
-.navbar-left{
-    display: flex;
-
-}
-
-.navbar-right{
-    display: flex;
-
-}
-
-.navbar-left ul{
-    margin-left: 32px;
-}
-
-.navbar-left ul li a,
-.navbar-right ul li a {
+nav .title {
+    color: var(--verde);
+    font-size: 1.5rem;
+    margin: 1rem;
     text-decoration: none;
-    color: var(--vinotinto);
-    border:  1px solid white;
-    padding: 12px;
-    border-radius: 8px;
 }
 
-.navbar-left ul li a:hover,
-.navbar-right ul li a:hover {
-    text-decoration: none;    
-    border:  1px solid var(--light);
-    
+nav ul {
+    display: flex;
 }
 
-.navbar-right :last-child:hover{
-    
-    border:none;
+nav ul li {
+    list-style: none;
+}
+
+nav ul li a {
+    color: var(--white);
+    display: block;
+    text-decoration: none;
+    padding: 0.5rem;
+    margin: 0 0.5rem;
+    border-radius: 0.5rem;
+}
+
+nav ul li a:hover {
+    background-color: var(--verde);
+}
+
+nav ul li :last-child a:hover {
+    background-color: var(--white);
+}
+
+nav .menu {
+    cursor: pointer;
+    display: none;
+    position: absolute;
+    top: 1rem;
+    right: 0.5rem;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 2.25rem;
+    height: 2rem;
+}
+
+nav .menu span {
+    height: 0.4rem;
+    width: 100%;
+    background-color: var(--verde);
+    border-radius: 0.2rem;
 }
 
 
-.navbar-usuario{
-    color: var(--vinotinto);
-    margin-right: 12px;
-}
+@media(max-width:790px) {
 
-
-
-
-
-@media(max-width:640px){
-    .menu{
-        display: block;
-        width: 40px;
+    nav .menu {
+        display: flex;
     }
 
-    .navbar-left ul li{
+    nav {
+        flex-direction: column;
+        align-items: start;
+    }
+
+    nav ul {
         display: none;
+        flex-direction: column;
+        width: 100%;
+        margin-bottom: 0.25rem;
     }
-    .navbar-usuario{
-        display: none;
+
+    nav ul.open {
+        display: flex;
     }
+
+    nav ul li {
+        width: 100%;
+        text-align: center;
+    }
+
+    nav ul li a {
+        margin: 0.2rem 0.5rem;
+    }
+
+    .active {
+        background-color: var(--vinotinto);
+
+    }
+
+    nav ul li a:hover {
+        background-color: var(--vinotinto);
+        color: var(--verde);
+    }
+
+    nav ul li :last-child a:hover {
+        background-color: var(--vinotinto);
+        color: var(--white);
+    }
+
 }
